noinst_LTLIBRARIES = libdim.la

INCLUDES =  -I$(top_builddir) -I$(top_srcdir) -I$(top_builddir)/src -I$(top_srcdir)/src

libdim_la_SOURCES = dim.c \
				   dimutil.c \
			       pmstore.c \
			       pmsegment.c \
			       cfg_scanner.c \
			       epi_cfg_scanner.c \
			       mds.c \
			       metric.c \
			       numeric.c \
			       rtsa.c \
			       enumeration.c \
			       peri_cfg_scanner.c \
			       scanner.c 

noinst_HEADERS = dim.h \
				 dimutil.h \
			     pmstore.h \
			     pmstore_req.h \
				 pmsegment.h \
			     cfg_scanner.h \
			     epi_cfg_scanner.h \
			     mds.h \
			     metric.h \
			     numeric.h \
			     rtsa.h \
			     enumeration.h \
			     peri_cfg_scanner.h \
			     scanner.h

