INCLUDES =  -I$(top_builddir) -I$(top_srcdir) -I$(top_builddir)/src -I$(top_srcdir)/src

noinst_LTLIBRARIES = libutil.la

libutil_la_SOURCES = bytelib.c \
                    dateutil.c \
                    ioutil.c \
                    linkedlist.c \
                    strbuff.c

noinst_HEADERS = bytelib.h \
                 dateutil.h \
                 ioutil.h \
                 linkedlist.h \
                 strbuff.h \
                 log.h
