INCLUDES =  -I$(top_builddir) -I$(top_srcdir) -I$(top_builddir)/src -I$(top_srcdir)/src

noinst_LIBRARIES = libtestdim.a

libtestdim_a_SOURCES = testdim.c \
					   testmds.c \
				 	   testpmsegment.c \
				 	   testpmstore.c \
				 	   testdateutil.c \
				 	   testioutil.c

noinst_HEADERS = testdim.h \
				 testmds.h \
				 testpmsegment.h \
				 testpmstore.h \
				 testdateutil.h \
				 testioutil.h


