INCLUDES =  -I$(top_builddir) -I$(top_srcdir) -I$(top_builddir)/src -I$(top_srcdir)/src

noinst_LIBRARIES = libtestfunctional.a

libtestfunctional_a_SOURCES = test_epicfgscanner.c \
							  test_pericfgscanner.c \
							  test_functional.c \
                              test_association.c \
                              test_configuring.c \
                              test_operating.c \
                              test_disassociating.c

noinst_HEADERS = test_epicfgscanner.h \
				 test_pericfgscanner.h \
				 test_functional.h \
                 test_association.h \
                 test_configuring.h \
                 test_operating.h \
                 test_disassociating.h

