AC_INIT(mgr, 1.0)

PACKAGE=mgr
VERSION=1.0

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

LT_INIT

AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC

AM_PROG_CC_C_O

AC_DEFINE(_GNU_SOURCE)

PKG_CHECK_MODULES(ANTIDOTE, antidote)
PKG_CHECK_MODULES(GLIB, glib-2.0)

# dependencies of communication plug-in
PKG_CHECK_MODULES(DBUS, [dbus-1 >= 1.4.0])
PKG_CHECK_MODULES(GLIB, glib-2.0)
PKG_CHECK_MODULES(GIO, gio-2.0)
PKG_CHECK_MODULES(DBUS_GLIB, dbus-glib-1)

CFLAGS="$CFLAGS -O0 -g -pthread -Wall -Werror -fPIC"
LIBS="$LIBS -lm"

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
