noinst_LTLIBRARIES = libparser.la
INCLUDES =  -I$(top_builddir) -I$(top_srcdir) -I$(top_builddir)/src -I$(top_srcdir)/src

libparser_la_SOURCES = decoder_ASN1.c \
                      struct_cleaner.c \
                      encoder_ASN1.c

noinst_HEADERS = decoder_ASN1.h \
                 struct_cleaner.h \
                 encoder_ASN1.h
