INCLUDES =  -I$(top_builddir) -I$(top_srcdir) -I$(top_builddir)/src -I$(top_srcdir)/src


noinst_LTLIBRARIES = libtransexampleoximeterplugin.la

libtransexampleoximeterplugin_la_SOURCES = example_oximeter.c

noinst_HEADERS = example_oximeter.h

libtransexampleoximeterplugin_la_CFLAGS = @GLIB_CFLAGS@ @GIO_CFLAGS@
